--- a/manager/src/main/res/layout/terminal_tutorial_activity.xml
+++ b/manager/src/main/res/layout/terminal_tutorial_activity.xml
@@ -22,54 +22,31 @@
         android:paddingBottom="16dp"
         app:fitsSystemWindowsInsets="bottom|top">
 
-        <LinearLayout
+        <com.google.android.material.card.MaterialCardView
             android:id="@android:id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/card_background"
-            android:backgroundTint="?colorPrimaryContainer"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            android:duplicateParentState="true"
-            android:elevation="4dp"
-            android:foreground="?selectableItemBackground"
-            android:orientation="horizontal"
-            android:outlineAmbientShadowColor="?colorPrimaryContainer"
-            android:outlineSpotShadowColor="?colorPrimaryContainer"
-            android:paddingStart="16dp"
-            android:paddingTop="24dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="24dp">
+            style="@style/FilledCard">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="-4dp"
+                android:layout_marginStart="-8dp"
+                android:layout_marginTop="4dp"
                 android:importantForAccessibility="no"
                 android:src="@drawable/ic_help_outline_24dp"
                 android:tint="?colorOnPrimaryContainer"
                 android:tintMode="src_in" />
 
-            <LinearLayout
+            <TextView
+                android:id="@android:id/summary"
+                style="@style/TerminalTutorialText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="20dp"
-                android:orientation="vertical">
+                android:layout_marginStart="36dp"
+                android:duplicateParentState="true"
+                android:textColor="?colorOnPrimaryContainer"
+                tools:text="@string/rish_description" />
 
-                <TextView
-                    android:id="@android:id/summary"
-                    style="@style/TerminalTutorialText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:duplicateParentState="true"
-                    android:textColor="?colorOnPrimaryContainer"
-                    tools:text="@string/rish_description" />
-
-            </LinearLayout>
-
-        </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -84,6 +61,7 @@
                 android:layout_height="32dp"
                 android:importantForAccessibility="no"
                 android:padding="4dp"
+                android:layout_marginStart="8dp"
                 android:src="@drawable/ic_numeric_1_circle_outline_24"
                 android:tint="?android:textColorSecondary"
                 android:tintMode="src_in" />
@@ -91,7 +69,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="16dp"
                 android:layout_weight="1"
                 android:clipChildren="false"
                 android:clipToPadding="false"
@@ -136,6 +114,7 @@
                 android:layout_height="32dp"
                 android:importantForAccessibility="no"
                 android:padding="4dp"
+                android:layout_marginStart="8dp"
                 android:src="@drawable/ic_numeric_2_circle_outline_24"
                 android:tint="?android:textColorSecondary"
                 android:tintMode="src_in" />
@@ -143,7 +122,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="16dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -178,6 +157,7 @@
                 android:layout_height="32dp"
                 android:importantForAccessibility="no"
                 android:padding="4dp"
+                android:layout_marginStart="8dp"
                 android:src="@drawable/ic_numeric_3_circle_outline_24"
                 android:tint="?android:textColorSecondary"
                 android:tintMode="src_in" />
@@ -185,7 +165,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="16dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
