--- a/manager/src/main/res/values/colors.xml
+++ b/manager/src/main/res/values/colors.xml
@@ -61,4 +61,83 @@
     <color name="md_theme_dark_inversePrimary">#4355B9</color>
     <color name="md_theme_dark_shadow">#000000</color>
     <color name="md_theme_dark_primaryInverse">#4355B9</color>
+
+    <color name="palette_primary_100">#ffffffff</color>
+    <color name="palette_primary_99">#fffefbff</color>
+    <color name="palette_primary_95">#ffefefff</color>
+    <color name="palette_primary_90">#ffdde0ff</color>
+    <color name="palette_primary_80">#ffb9c3ff</color>
+    <color name="palette_primary_70">#ff95a5ff</color>
+    <color name="palette_primary_60">#ff7789f0</color>
+    <color name="palette_primary_50">#ff5d6fd4</color>
+    <color name="palette_primary_40">#ff4355b9</color>
+    <color name="palette_primary_30">#ff293ca0</color>
+    <color name="palette_primary_20">#ff08218a</color>
+    <color name="palette_primary_10">#ff000d61</color>
+    <color name="palette_primary_0">#ff000000</color>
+    <color name="palette_secondary_100">#ffffffff</color>
+    <color name="palette_secondary_99">#fffefbff</color>
+    <color name="palette_secondary_95">#ffefefff</color>
+    <color name="palette_secondary_90">#ffe0e1fa</color>
+    <color name="palette_secondary_80">#ffc4c5dd</color>
+    <color name="palette_secondary_70">#ffa8aac1</color>
+    <color name="palette_secondary_60">#ff8d8fa6</color>
+    <color name="palette_secondary_50">#ff74768b</color>
+    <color name="palette_secondary_40">#ff5b5d71</color>
+    <color name="palette_secondary_30">#ff43465a</color>
+    <color name="palette_secondary_20">#ff2d2f42</color>
+    <color name="palette_secondary_10">#ff171a2c</color>
+    <color name="palette_secondary_0">#ff000000</color>
+    <color name="palette_tertiary_100">#ffffffff</color>
+    <color name="palette_tertiary_99">#fffcfcfc</color>
+    <color name="palette_tertiary_95">#ffffebf7</color>
+    <color name="palette_tertiary_90">#ffffd7f3</color>
+    <color name="palette_tertiary_80">#ffe5bad7</color>
+    <color name="palette_tertiary_70">#ffc99fbc</color>
+    <color name="palette_tertiary_60">#ffad85a1</color>
+    <color name="palette_tertiary_50">#ff916b86</color>
+    <color name="palette_tertiary_40">#ff77536d</color>
+    <color name="palette_tertiary_30">#ff5d3c55</color>
+    <color name="palette_tertiary_20">#ff45263e</color>
+    <color name="palette_tertiary_10">#ff2d1228</color>
+    <color name="palette_tertiary_0">#ff000000</color>
+    <color name="palette_error_100">#ffffffff</color>
+    <color name="palette_error_99">#fffcfcfc</color>
+    <color name="palette_error_95">#ffffede9</color>
+    <color name="palette_error_90">#ffffdad4</color>
+    <color name="palette_error_80">#ffffb4a9</color>
+    <color name="palette_error_70">#ffff897a</color>
+    <color name="palette_error_60">#ffff5449</color>
+    <color name="palette_error_50">#ffdd3730</color>
+    <color name="palette_error_40">#ffba1b1b</color>
+    <color name="palette_error_30">#ff930006</color>
+    <color name="palette_error_20">#ff680003</color>
+    <color name="palette_error_10">#ff410001</color>
+    <color name="palette_error_0">#ff000000</color>
+    <color name="palette_neutral_100">#ffffffff</color>
+    <color name="palette_neutral_99">#fffefbff</color>
+    <color name="palette_neutral_95">#fff3f0f5</color>
+    <color name="palette_neutral_90">#ffe4e1e6</color>
+    <color name="palette_neutral_80">#ffc8c6ca</color>
+    <color name="palette_neutral_70">#ffacaaaf</color>
+    <color name="palette_neutral_60">#ff929094</color>
+    <color name="palette_neutral_50">#ff77767a</color>
+    <color name="palette_neutral_40">#ff5f5e62</color>
+    <color name="palette_neutral_30">#ff47464a</color>
+    <color name="palette_neutral_20">#ff303034</color>
+    <color name="palette_neutral_10">#ff1b1b1f</color>
+    <color name="palette_neutral_0">#ff000000</color>
+    <color name="palette_neutral_variant_100">#ffffffff</color>
+    <color name="palette_neutral_variant_99">#fffefbff</color>
+    <color name="palette_neutral_variant_95">#fff1effa</color>
+    <color name="palette_neutral_variant_90">#ffe3e1ec</color>
+    <color name="palette_neutral_variant_80">#ffc6c5d0</color>
+    <color name="palette_neutral_variant_70">#ffabaab5</color>
+    <color name="palette_neutral_variant_60">#ff90909a</color>
+    <color name="palette_neutral_variant_50">#ff767680</color>
+    <color name="palette_neutral_variant_40">#ff5e5e67</color>
+    <color name="palette_neutral_variant_30">#ff46464f</color>
+    <color name="palette_neutral_variant_20">#ff2f3038</color>
+    <color name="palette_neutral_variant_10">#ff1a1b23</color>
+    <color name="palette_neutral_variant_0">#ff000000</color>
 </resources>
